phpmyadmin-deployment.yaml
# Kubernetes API version
apiVersion: v1
# Type of "request"
kind: Deployment
# Metadata of the "object"
metadata:
  # Name of the "object"
  name: phpmyadmin
  namespace: ukd
  # Labels of the "object"
  labels:
    # A lable named "name" with value "phpmyadmin"
    name: phpmyadmin
# spec ~= Specificationsof the "object"
spec:
  # List of Container definitions
  containers:
    # The "name"/"suffix" of the container name
    - name: phpmyadmin
      # What Docker image to use
      image: phpmyadmin/phpmyadmin
      ports:
        - containerPort: 80
          name: phpmyadmin
