phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  # labels for the service
  labels:
    name: phpmyadmin
  # name of the service
  name: phpmyadmin
  namespace: ukd
spec:
  ports:
    # the port that this service should serve on
    - port: 81
      # set the target of the port, in this case 81 -> 80
      targetPort: 80
  # label keys and values that must match in order to receive traffic for this service
  selector:
    # select pods with the name "phpmyadmin"
    name: phpmyadmin
