wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: egov
  labels:
    app: wordpress
spec:
  ports:
    - port: 81
      targetPort: 81
      protocol: TCP
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
