phpmyadmin-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
  namespace: egov
spec:
  backend:
    serviceName: phpmyadmin-service
    servicePort: 80
